--- a/website/docs/integrations/integration-with-fastify.mdx
+++ b/website/docs/integrations/integration-with-fastify.mdx
@@ -19,7 +19,6 @@ So you can benefit from the powerful plugins of Fastify ecosystem with GraphQL Y
 ```ts
 import { createServer } from 'graphql-yoga'
 import fastify from 'fastify'
-import { Readable } from 'stream'
 
 // This is the fastify instance you have created
 const app = fastify({ logger: true })
@@ -55,9 +54,7 @@ app.route({
 
     reply.status(response.status)
 
-    // Converts ReadableStream to a NodeJS Stream
-    const nodeStream = Readable.from(response.body)
-    reply.send(nodeStream)
+    reply.send(response.body)
   },
 })
 
