fix some tests and documentation

--- a/website/docs/migration/migration-from-apollo-server.mdx
+++ b/website/docs/migration/migration-from-apollo-server.mdx
@@ -12,7 +12,7 @@ You can start with installing `graphql-yoga` package.
 
 ### Install equivalent **Envelop** plugins of the Apollo Server
 
-- `introspection: false` flag
+- `disableIntrospection: true` flag
   - If you are using this flag, [install `@envelop/disable-introspection`](https://www.envelop.dev/plugins/use-disable-introspection)
 - Apollo Federation
   - If you are using Apollo Server errors, [install `@envelop/use-apollo-federation`](https://www.envelop.dev/plugins/use-apollo-federation)
