Fastify integration docs update (#789)
* docs update

* futher update

--- a/website/docs/integrations/integration-with-fastify.mdx
+++ b/website/docs/integrations/integration-with-fastify.mdx
@@ -56,7 +56,7 @@ app.route({
     reply.status(response.status)
 
     // Converts ReadableStream to a NodeJS Stream
-    const nodeStream = Readable.from(response.body)
+    const nodeStream = Readable.from(response.body as any)
     reply.send(nodeStream)
   },
 })
