--- a/website/docs/migration/migration-from-apollo-server.mdx
+++ b/website/docs/migration/migration-from-apollo-server.mdx
@@ -41,6 +41,7 @@ import { schema } from './schema'
 - const server = new ApolloServer({
 + const server = new GraphQLYoga({
   // You can also pass `typeDefs` and `resolvers` here directly if you previously use `ApolloServer` constructor to build your `GraphQLSchema`
+  // schema: { typeDefs, resolvers },
   schema,
 +  // Add here the plugins you installed above
 +  plugins: [useApolloServerErrors()],
