--- a/website/docs/features/apollo-federation.mdx
+++ b/website/docs/features/apollo-federation.mdx
@@ -1,6 +1,6 @@
 ---
 id: apollo-federation
-title: Apollo Federation Gateway as GraphQL Yoga
+title: Apollo Federation with GraphQL Yoga
 sidebar_label: Apollo Federation
 ---
 
@@ -8,11 +8,22 @@ sidebar_label: Apollo Federation
 
 Thanks to [Envelop's Apollo Federation](https://www.envelop.dev/plugins/use-apollo-federation) plugin, we can use GraphQL Yoga to build our gateway server.
 
-## Installation
+> As documented in the [Apollo Federation docs](https://www.apollographql.com/docs/federation/gateway/#setup), `@apollo/gateway` package doesn't support GraphQL v16 so you have to install `graphql@15`
 
-<PackageInstall packages={['@envelop/apollo-federation']} />
+## Gateway
 
-## Example
+### Installation for Gateway
+
+<PackageInstall
+  packages={[
+    'graphql-yoga',
+    '@apollo/gateway',
+    '@envelop/apollo-federation',
+    'graphql@15',
+  ]}
+/>
+
+### Example Gateway
 
 ```ts
 import { createServer } from 'graphql-yoga'
@@ -43,3 +54,55 @@ const server = createServer({
 // Start the server and explore http://localhost:4000/graphql
 server.start()
 ```
+
+## Federation Service
+
+You don't need any extra plugins for Yoga for Federation Service.
+
+### Installation
+
+<PackageInstall packages={['graphql-yoga', '@apollo/subgraph', 'graphql']} />
+
+### Example User Service
+
+```ts
+const { parse } = require('graphql')
+const { buildSubgraphSchema } = require('@apollo/subgraph')
+const { createServer } = require('graphql-yoga')
+
+const typeDefs = parse(/* GraphQL */ `
+  type Query {
+    me: User
+  }
+
+  type User @key(fields: "id") {
+    id: ID!
+    username: String
+  }
+`)
+
+const resolvers = {
+  Query: {
+    me() {
+      return { id: '1', username: '@ava' }
+    },
+  },
+  User: {
+    __resolveReference(user, { fetchUserById }) {
+      return fetchUserById(user.id)
+    },
+  },
+}
+const server = createServer({
+  schema: buildSubgraphSchema([{ typeDefs, resolvers }]),
+  port: 4001,
+})
+
+server.start().then(() => {
+  console.log(`🚀 Server ready at http://localhost:4001`)
+})
+```
+
+## Working Example
+
+Check our [working example](https://github.com/dotansimha/graphql-yoga/tree/master/examples/apollo-federation) to try it out.
