--- a/website/docs/integrations/integration-with-cloudflare-workers.mdx
+++ b/website/docs/integrations/integration-with-cloudflare-workers.mdx
@@ -1,5 +1,5 @@
 ---
-id: integration-with-cf
+id: integration-with-cloudflare-workers
 title: Integration with Cloudflare Workers
 sidebar_label: Cloudflare Workers
 ---
